Starting Java Fixing Css overflow
Starting Java Fixing Css overflow

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
         position: relative;
         background-color: rgba(238, 238, 238, 0.377);
         margin-left: 20px;
-        margin-right: 20px;
+        margin-right:20px;
 
         }
 /* =================cards=============================== */
@@ -14,25 +14,25 @@
 
 
     .card{
+        display:grid;
+        grid-template-columns: 1fr 3fr;
+        grid-template-areas: 'avatar text';
         background-color: white;
         border-radius: 5px;
         border: .5px solid rgb(194, 194, 194);
         margin-bottom: 20px;
-        padding:20px;
+        padding:20px; 
+        
     }
 
     .avatar{
-       float: left;
-       border-radius: 50%;
+      grid-area: avatar;
+      border-radius: 50%;
     }
 
     .text-container{
-       display:flex;
-       flex-direction: column;
-       justify-content: center;
-       justify-content: space-evenly;
-       margin:none;
-       padding: none;
+       grid-area: text;
+       padding-left:5px;
     }
 
     h2,
@@ -76,20 +76,15 @@
 
     @media (min-width:730px) {
 
-
-
         .grid-container{
             display:grid;
             grid-template-columns: 1fr 1fr;
             grid-gap: 20px;
-            grid-auto-flow: row;
         }
 
-
-
-
     }
-    @media (min-width:1000px) {
+
+    @media (min-width:1250px) {
 
         body{
             margin-left: 5%;
@@ -98,11 +93,7 @@
 
         .grid-container{
             grid-template-columns: 1fr 1fr 1fr;
-            grid-auto-rows: auto;
 
         }
-
-
-
 
     }
